[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "voluntrain"
version = "0.1.0"
description = "A decentralized volunteer computing library for PyTorch"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
  {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "torch",
    "pyzmq",
    "cloudpickle",
    "psutil"  # Useful for checking CPU usage later
]

[project.urls]
"Homepage" = "https://github.com/treamyracle/voluntrain"